--- a/app/src/main/res/layout/activity_choose_position.xml
+++ b/app/src/main/res/layout/activity_choose_position.xml
@@ -24,7 +24,8 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintHorizontal_bias="0.0">
         <TextView
             android:text="@string/app_name"
             android:layout_width="wrap_content"
@@ -42,36 +43,40 @@
         android:backgroundTint="#000099"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/navigate_btn"
-        android:text="@string/button_navigate"
+        android:id="@+id/choose_faculty_button"
+        android:text="@string/choose_faculty_button"
         android:textColor="#ffffff"
-        android:onClick="navigate"
-        tools:layout_editor_absoluteY="492dp"
-        tools:layout_editor_absoluteX="148dp" />
+        android:onClick="onFacultyChoose"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
-        android:text="@string/choose_destination"
-        android:layout_width="279dp"
-        android:layout_height="64dp"
-        android:id="@+id/welcome_text"
+        android:text="@string/choose_faculty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        tools:layout_editor_absoluteY="112dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintRight_toRightOf="parent" />
 
-    <Spinner
-        android:layout_width="238dp"
-        android:layout_height="36dp"
-        android:id="@+id/spinner"
-        android:entries="@array/faculty_array"
-        android:prompt="@string/faculty_prompt"
+    <ListView
+      android:id="@+id/listview"
+      android:layout_width="316dp"
+      android:layout_height="223dp"
+        app:layout_constraintBottom_toTopOf="@+id/choose_faculty_button"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 
 </android.support.constraint.ConstraintLayout>
