--- a/app/src/main/res/layout/activity_choose_position.xml
+++ b/app/src/main/res/layout/activity_choose_position.xml
@@ -59,11 +59,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
-        tools:layout_editor_absoluteY="112dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <ListView
       android:id="@+id/listview"
