--- a/app/src/main/res/layout/activity_choose_destination.xml
+++ b/app/src/main/res/layout/activity_choose_destination.xml
@@ -14,7 +14,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="it.unirc.barbiana20.medinav.ChoosePosition">
 
-<android.support.v7.widget.Toolbar
+    <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="56dp"
@@ -25,7 +25,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintHorizontal_bias="0.0">
+        app:layout_constraintHorizontal_bias="0.0">
         <TextView
             android:text="@string/app_name"
             android:layout_width="wrap_content"
@@ -39,45 +39,32 @@
     </android.support.v7.widget.Toolbar>
 
 
-    <Button
-        android:backgroundTint="#000099"
+
+
+    <TextView
+        android:text="@string/choose_destination"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/choose_faculty_button"
-        android:text="@string/choose_faculty_button"
-        android:textColor="#ffffff"
-        android:onClick="onFacultyChoose"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
+        android:id="@+id/textView"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <TextView
-        android:text="@string/choose_faculty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="48dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
     <ListView
-      android:id="@+id/listview"
-      android:layout_width="316dp"
-      android:layout_height="223dp"
-        app:layout_constraintBottom_toTopOf="@+id/choose_faculty_button"
-        android:layout_marginBottom="8dp"
+        android:id="@+id/listview_2"
+        android:layout_width="316dp"
+        android:layout_height="223dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp" />
 
 
 </android.support.constraint.ConstraintLayout>
