--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,8 @@
         android:layout_width="352dp"
         android:layout_height="256dp"
         android:src="@drawable/logo_unirc"
+        android:adjustViewBounds="true"
+        android:scaleType="centerInside"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
