--- a/app/src/main/res/layout/activity_choose_destination.xml
+++ b/app/src/main/res/layout/activity_choose_destination.xml
@@ -12,7 +12,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="it.unirc.barbiana20.medinav.ChoosePosition">
+    tools:context="it.unirc.barbiana20.medinav.ChooseDestination">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -64,7 +64,8 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:divider="@android:drawable/divider_horizontal_bright" />
 
 
 </android.support.constraint.ConstraintLayout>
