--- a/app/src/main/res/layout/activity_choose_faculty.xml
+++ b/app/src/main/res/layout/activity_choose_faculty.xml
@@ -12,9 +12,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="it.unirc.barbiana20.medinav.ChoosePosition">
-
-<android.support.v7.widget.Toolbar
+    tools:context="it.unirc.barbiana20.medinav.ChooseFaculty">
+    <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="56dp"
@@ -25,7 +24,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintHorizontal_bias="0.0">
+        app:layout_constraintHorizontal_bias="0.0">
+
         <TextView
             android:text="@string/app_name"
             android:layout_width="wrap_content"
@@ -64,7 +64,8 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:divider="@android:drawable/divider_horizontal_bright" />
 
 
 </android.support.constraint.ConstraintLayout>
