--- a/app/src/main/res/layout/activity_map_show.xml
+++ b/app/src/main/res/layout/activity_map_show.xml
@@ -16,13 +16,24 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="56dp"
-        android:background="?attr/colorPrimary"
+        android:background="#000099"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintRight_toRightOf="parent">
+        <TextView
+            android:text="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/toolbar_title"
+            android:gravity="left"
+            android:textSize="24sp"
+            android:textStyle="normal|bold"
+            android:textColor="#fff" />
+    </android.support.v7.widget.Toolbar>
     <Button
         android:text="R"
         android:layout_width="wrap_content"
