--- a/app/src/main/res/layout/activity_choose_faculty.xml
+++ b/app/src/main/res/layout/activity_choose_faculty.xml
@@ -12,53 +12,42 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="it.unirc.barbiana20.medinav.ChooseFaculty">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:background="#000099"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0">
+    tools:context="it.unirc.barbiana20.medinav.ChooseFaculty"
+    android:fitsSystemWindows="true">
 
-        <TextView
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:id="@+id/toolbar_title"
-            android:gravity="left"
-            android:textSize="24sp"
-            android:textStyle="normal|bold"
-            android:textColor="#fff" />
-    </android.support.v7.widget.Toolbar>
-
-
-
+    <include layout="@layout/toolbar"/>
 
     <TextView
         android:text="@string/choose_faculty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_marginTop="80dp"
+        android:id="@+id/chooseFacultyText"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent" />
-
+    <android.support.design.widget.FloatingActionButton
+        android:src="@drawable/qrcode_scan"
+        app:fabSize="normal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        app:backgroundTint="@color/colorPrimary"
+        android:tint="@color/darkAccent"
+        android:onClick="scanQR"
+        android:id="@+id/qrScanFAB"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="16dp" />
     <ListView
-      android:id="@+id/listview"
-      android:layout_width="316dp"
-      android:layout_height="223dp"
+        android:id="@+id/facultyList"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/chooseFacultyText"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
@@ -66,6 +55,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         android:divider="@android:drawable/divider_horizontal_bright" />
-
 
 </android.support.constraint.ConstraintLayout>
