--- a/app/src/main/res/layout/activity_choose_starting_point.xml
+++ b/app/src/main/res/layout/activity_choose_starting_point.xml
@@ -28,7 +28,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent" />
-
+    <android.support.design.widget.FloatingActionButton
+        android:src="@drawable/qrcode_scan"
+        app:fabSize="normal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        app:backgroundTint="@color/colorPrimary"
+        android:tint="@color/darkAccent"
+        android:onClick="scanQR"
+        android:id="@+id/qrScanFAB"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="16dp" />
     <ListView
         android:id="@+id/destinationList"
         android:layout_width="0dp"
