--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
@@ -12,50 +11,32 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:fitsSystemWindows="true"
     tools:context="it.unirc.barbiana20.medinav.MainActivity">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:background="#000099"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-        <TextView
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:id="@+id/toolbar_title"
-            android:gravity="left"
-            android:textSize="24sp"
-            android:textStyle="normal|bold"
-            android:textColor="#fff" />
-    </android.support.v7.widget.Toolbar>
+
+    <include layout="@layout/toolbar"/>
+
     <ImageView
-        android:layout_width="352dp"
-        android:layout_height="256dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/logo_unirc"
-        android:adjustViewBounds="true"
         android:scaleType="centerInside"
         android:layout_marginStart="16dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        android:layout_marginTop="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/welcome_text"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        android:id="@+id/imageView"
+        android:cropToPadding="false"
+        tools:layout_editor_absoluteY="80dp" />
     <Button
-        android:backgroundTint="#000099"
-        android:text="@string/button_scan_qr"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="@string/button_explore"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/scan_qr_btn"
+        android:id="@+id/explore_btn"
         android:layout_marginStart="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,24 +44,27 @@
         android:layout_marginEnd="32dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
-        android:onClick="scanQR"
-        />
+        android:onClick="onExplore"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
 
     <Button
-        android:backgroundTint="#000099"
+        android:backgroundTint="@color/colorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/navigate_btn"
         android:text="@string/button_navigate"
         android:textColor="#ffffff"
         android:layout_marginStart="32dp"
-        app:layout_constraintLeft_toRightOf="@+id/scan_qr_btn"
+        app:layout_constraintLeft_toRightOf="@+id/explore_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="32dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
-        android:onClick="navigate"/>
+        android:onClick="onNavigate"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
 
     <TextView
         android:text="@string/welcome_line"
@@ -91,8 +75,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="80dp"
-        app:layout_constraintHorizontal_bias="0.58" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 </android.support.constraint.ConstraintLayout>
