--- a/app/src/main/res/layout/activity_map_show.xml
+++ b/app/src/main/res/layout/activity_map_show.xml
@@ -11,30 +11,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="it.unirc.barbiana20.medinav.MapShow">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:background="#000099"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-        <TextView
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:id="@+id/toolbar_title"
-            android:gravity="left"
-            android:textSize="24sp"
-            android:textStyle="normal|bold"
-            android:textColor="#fff" />
-    </android.support.v7.widget.Toolbar>
-    <Button
+    tools:context="it.unirc.barbiana20.medinav.MapShow"
+    android:fitsSystemWindows="true">
+
+    <include layout="@layout/toolbar"/>
+
+    <!--Button
         android:text="R"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,7 +25,7 @@
         app:layout_constraintRight_toLeftOf="@+id/floatingActionButton"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="24dp" />
+        android:layout_marginEnd="24dp" /-->
 
     <com.onlylemi.mapview.library.MapView
         android:id="@+id/mapview"
@@ -54,27 +36,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <TextView
-        android:text="Log:"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:id="@+id/log_viewer"
-        android:elevation="2dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="8dp" />
-
     <android.support.design.widget.FloatingActionButton
         android:src="@drawable/qrcode_scan"
         app:fabSize="normal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        app:backgroundTint="@android:color/holo_blue_bright"
+        app:backgroundTint="@color/colorPrimary"
+        android:tint="@color/darkAccent"
         android:onClick="scanQR"
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/qrScanFAB"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         app:layout_constraintRight_toRightOf="@+id/mapview"
