--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -14,31 +14,56 @@
     android:fitsSystemWindows="true"
     tools:context="it.unirc.barbiana20.medinav.MainActivity">
 
-    <include layout="@layout/toolbar" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+        <TextView
+            android:text="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/toolbar_title"
+            android:gravity="start"
+            android:textSize="24sp"
+            android:textStyle="normal|bold"
+            android:textColor="#fff" />
+    </android.support.v7.widget.Toolbar>
 
     <ImageView
-        android:layout_width="220dp"
-        android:layout_height="208dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:src="@drawable/logo_unirc"
-        android:scaleType="centerInside"
+        android:scaleType="fitCenter"
         android:id="@+id/imageView"
         android:cropToPadding="false"
         app:srcCompat="@drawable/logo_unirc"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:layout_marginTop="24dp"
+        android:adjustViewBounds="false"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="24dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/welcome_text"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp" />
     <TextView
         android:text="@string/welcome_line"
         android:layout_width="279dp"
         android:layout_height="64dp"
         android:id="@+id/welcome_text"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:layout_marginTop="83dp"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
-        android:layout_marginStart="48dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toTopOf="@+id/explore_btn"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
     <Button
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/button_explore"
@@ -47,13 +72,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/explore_btn"
         android:onClick="onExplore"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
         app:layout_constraintRight_toLeftOf="@+id/navigate_btn"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.37" />
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:backgroundTint="@color/colorPrimary"
@@ -63,10 +85,10 @@
         android:text="@string/button_navigate"
         android:textColor="#ffffff"
         android:onClick="onNavigate"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 
