--- a/app/src/main/res/layout/activity_choose_destination.xml
+++ b/app/src/main/res/layout/activity_choose_destination.xml
@@ -15,7 +15,27 @@
     tools:context="it.unirc.barbiana20.medinav.ChooseDestination"
     android:fitsSystemWindows="true">
 
-    <include layout="@layout/toolbar"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+        <TextView
+            android:text="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/toolbar_title"
+            android:gravity="start"
+            android:textSize="24sp"
+            android:textStyle="normal|bold"
+            android:textColor="#fff" />
+    </android.support.v7.widget.Toolbar>
 
     <TextView
         android:text="@string/choose_destination"
