--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,22 +14,43 @@
     android:fitsSystemWindows="true"
     tools:context="it.unirc.barbiana20.medinav.MainActivity">
 
-    <include layout="@layout/toolbar"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+        <TextView
+            android:text="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/toolbar_title"
+            android:gravity="start"
+            android:textSize="24sp"
+            android:textStyle="normal|bold"
+            android:textColor="#fff" />
+    </android.support.v7.widget.Toolbar>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:src="@drawable/logo_unirc"
         android:scaleType="centerInside"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:layout_marginTop="24dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/imageView"
         android:cropToPadding="false"
-        tools:layout_editor_absoluteY="80dp" />
+        app:layout_constraintBottom_toTopOf="@+id/welcome_text"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
     <Button
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/button_explore"
@@ -37,16 +58,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/explore_btn"
-        android:layout_marginStart="32dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
         android:onClick="onExplore"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
+        app:layout_constraintRight_toLeftOf="@+id/navigate_btn"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp" />
 
     <Button
         android:backgroundTint="@color/colorPrimary"
@@ -55,27 +71,22 @@
         android:id="@+id/navigate_btn"
         android:text="@string/button_navigate"
         android:textColor="#ffffff"
-        android:layout_marginStart="32dp"
-        app:layout_constraintLeft_toRightOf="@+id/explore_btn"
+        android:onClick="onNavigate"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
-        android:onClick="onNavigate"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:text="@string/welcome_line"
-        android:layout_width="wrap_content"
-        android:layout_height="64dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/welcome_text"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/explore_btn"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
