--- a/app/src/main/res/layout/activity_mark_card.xml
+++ b/app/src/main/res/layout/activity_mark_card.xml
@@ -14,7 +14,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="it.unirc.barbiana20.medinav.ChooseDestination"
     android:fitsSystemWindows="true">
-    <include layout="@layout/toolbar" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+        <TextView
+            android:text="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/toolbar_title"
+            android:gravity="start"
+            android:textSize="24sp"
+            android:textStyle="normal|bold"
+            android:textColor="#fff" />
+    </android.support.v7.widget.Toolbar>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,21 +45,23 @@
         app:srcCompat="@drawable/no_image"
         android:background="@drawable/no_image"
         android:scaleType="centerCrop"
-        android:contentDescription="@string/no_image" />
+        android:contentDescription="@string/no_image"
+        android:adjustViewBounds="true"
+        app:layout_constraintHorizontal_bias="1.0" />
     <ScrollView
         android:id="@+id/cardScroller"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:scrollbars="vertical"
         android:fillViewport="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/cardImage"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp">
 
         <TextView
             android:layout_width="fill_parent"
@@ -52,5 +74,14 @@
             />
 
     </ScrollView>
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline2"
+        app:layout_constraintGuide_begin="180dp"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteY="180dp"
+        tools:layout_editor_absoluteX="0dp" />
 
 </android.support.constraint.ConstraintLayout>
