Added inflatable overflow menu for mapShow, extending app functionality.

--- a/app/src/main/res/layout/activity_mark_card.xml
+++ b/app/src/main/res/layout/activity_mark_card.xml
@@ -19,7 +19,7 @@
         android:layout_width="0dp"
         android:layout_height="64dp"
         android:background="@color/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:theme="@style/ToolbarTheme"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
